--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,7 @@
         android:layout_height="50dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:onClick="resetScores"
         android:text="⟲"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
